# rust_poc_oauth_flow

./: .gitignore  Cargo.toml  Makefile  README.md  index.html  myApp.json  secrets.sh  signup.html  template-app.yml  template-oauth.yml  test.postman_collection.json
config/clientId1/: config.json
config/clientId1/pages/: login.json
config/f977ec729e094141b6c1d01f50cba6ce/: config.json
config/f977ec729e094141b6c1d01f50cba6ce/pages/: consent.json  login.json  optin.json  signup.json
pages/clientid1/: consent.json  login.json  optin.json  signup.json
resources/: api.yaml  app.yaml  template-app.yml  template-oauth.yml
services/: Cargo.toml
services/edge/: Makefile  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
services/edge/deployment/: template.yml
services/edge/src/: handler.js  handler.js.map  handler.ts
services/edge/src/dtos/: config.ts  secret.ts
services/edge/src/modules/: encryption.ts  jwt.ts  s3Helper.js.map  ssmHelper.js.map  ssmHelper.ts
services/oauth/: Cargo.toml  Makefile
services/oauth/deployment/: oauth.yaml  template-oauth.yml
services/oauth/resources/: oauth.yaml  template-oauth.yml
services/oauth/src/: error.rs  lib.rs
services/oauth/src/dtos/: mod.rs
services/oauth/src/dtos/consent/: mod.rs  update_consent_request.rs
services/oauth/src/dtos/load_page/: mod.rs  page_request.rs
services/oauth/src/dtos/login/: get_user_request.rs  login_user_request.rs  mod.rs
services/oauth/src/dtos/optin/: mod.rs  update_optin_request.rs
services/oauth/src/dtos/signup/: mod.rs  singup_request.rs
services/oauth/src/dtos/token/: get_key_request.rs  get_private_key_request.rs  get_user_request.rs  jwks_request.rs  mod.rs  toekn_request.rs  token_request.rs
services/oauth/src/models/: csrf.rs  mod.rs  user.rs
services/oauth/src/queries/: add_user_query.rs  delete_csrf_query.rs  get_csrf_query.rs  get_page_query.rs  get_user_query.rs  mod.rs  update_consent_query.rs  update_optin_query.rs
services/oauth/src/queries/csrf/: add_csrf_query.rs  delete_csrf_query.rs  get_csrf_query.rs  mod.rs
services/oauth/src/queries/login/: login_user_query.rs  mod.rs
services/oauth/src/queries/pages/: get_page_query.rs  mod.rs
services/oauth/src/queries/token/: get_key.rs  get_private_key.rs  mod.rs
services/oauth/src/queries/user/: add_user_query.rs  get_user_query.rs  mod.rs
services/oauth/src/utils/: mod.rs
services/oauth/src/utils/injections/: get_page_di.rs  mod.rs
services/oauth/src/utils/injections/authorize/: authorize_di.rs  mod.rs
services/oauth/src/utils/injections/consent/: post_di.rs
services/oauth/src/utils/injections/login/: post_di.rs
services/oauth/src/utils/injections/optin/: post_di.rs
services/oauth/src/utils/injections/signup/: mod.rs  post_di.rs
services/oauth/src/utils/injections/token/: jwks_di.rs  mod.rs  token_di.rs
services/shared/: Cargo.toml
services/shared/src/: error.rs
services/shared/src/utils/: api_helper.rs  cookie.rs  crypto.rs  jwt.rs  mod.rs  serde_helper.rs
services/website/: Cargo.toml  Makefile  index.html
services/website/deployment/: template-api.yml  template-app.yml
services/website/deploymnet/: template-api.yml  template-app.yml
services/website/src/: lib.rs
services/website/src/dtos/auth/: auth_request.rs  mod.rs
services/website/src/dtos/jwt/: jwt_request.rs  mod.rs
services/website/src/dtos/login/: login_request.rs  mod.rs
services/website/src/models/: csrf.rs  user.rs
services/website/src/queries/: add_csrf_query.rs  get_csrf_query.rs  mod.rs
services/website/src/utils/: mod.rs
services/website/src/utils/injections/: mod.rs
services/website/src/utils/injections/auth/: auth_di.rs  mod.rs
services/website/src/utils/injections/jwt/: jwt_di.rs
services/website/src/utils/injections/login/: login_di.rs  mod.rs
src/: error.rs  lib.rs
src/aws/: client.rs
src/dtos/: mod.rs
src/dtos/app/: mod.rs
src/dtos/app/auth/: auth_request.rs  mod.rs
src/dtos/app/authorizer/: authorizer_request.rs  mod.rs
src/dtos/app/login/: login_request.rs
src/dtos/consent/: update_consent_request.rs
src/dtos/login/: get_user_request.rs
src/dtos/oauth/: mod.rs
src/dtos/oauth/consent/: mod.rs
src/dtos/oauth/load_page/: mod.rs  page_request.rs
src/dtos/oauth/login/: get_user_request.rs  mod.rs
src/dtos/oauth/optin/: update_optin_request.rs
src/dtos/oauth/signup/: mod.rs  singup_request.rs
src/dtos/oauth/token/: mod.rs
src/dtos/optin/: mod.rs  page_request.rs
src/dtos/token/: toekn_request.rs
src/models/: mod.rs  user.rs
src/queries/: add_csrf_query.rs  add_user_query.rs  delete_csrf_query.rs  get_page_query.rs  get_user_query.rs  mod.rs  update_consent_query.rs  update_optin_query.rs
src/services/: page.rs
src/utils/: api_helper.rs  cookie.rs  crypto.rs  dynamodb.rs  jwt.rs  mod.rs  serde_helper.rs
src/utils/injections/: mod.rs
src/utils/injections/app/: mod.rs
src/utils/injections/app/auth/: auth_di.rs  mod.rs
src/utils/injections/app/authorizer/: authorizer_di.rs  mod.rs
src/utils/injections/app/jwt/: jwt_di.rs  mod.rs
src/utils/injections/app/login/: login_di.rs
src/utils/injections/oauth/: get_page_di.rs  mod.rs
src/utils/injections/oauth/authorize/: authorize_di.rs
src/utils/injections/oauth/consent/: post_di.rs
src/utils/injections/oauth/login/: get_di.rs  post_di.rs
src/utils/injections/oauth/optin/: post_di.rs
src/utils/injections/oauth/signup/: mod.rs  post_di.rs
src/utils/injections/oauth/token/: token_di.rs
temp/: package.json
