[package]
name = "oauth-flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie = "0.15.1"
futures = "0.3.17"
http = "0.2.5"
lambda_http = "0.4.1"
lambda_runtime = "0.4.1"
aws-config = "0.0.24-alpha"
aws-sdk-dynamodb = "0.0.24-alpha"
aws-sdk-s3 = "0.0.24-alpha"
aws-types = "0.0.24-alpha"
log = "0.4.14"
rand = "0.8.4"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
serde_qs = "0.8.5"
sha2 = "0.9.8"
simple_logger = "1.13.0"
tokio = "1.13.0"
uuid = { version = "0.8", features = ["v4"] }
async-trait = "0.1.51"
base64-url = "1.4.10"
base64 = "0.13.0"
jsonwebtoken = "7"
serde_urlencoded = "0.7.0"

# APP
[[bin]]
name = "app-random-api"
path = "src/bin/lambda/app-random-api.rs"

[[bin]]
name = "app-lambda-authorizer"
path = "src/bin/lambda/app-lambda-authorizer.rs"

[[bin]]
name = "app-auth"
path = "src/bin/lambda/app-auth.rs"

[[bin]]
name = "app-login"
path = "src/bin/lambda/app-login.rs"

# OAUTH POST
[[bin]]
name = "oauth-consent-post"
path = "src/bin/lambda/oauth-consent-post.rs"

[[bin]]
name = "oauth-optin-post"
path = "src/bin/lambda/oauth-optin-post.rs"

[[bin]]
name = "oauth-login-post"
path = "src/bin/lambda/oauth-login-post.rs"

[[bin]]
name = "oauth-signup-post"
path = "src/bin/lambda/oauth-signup-post.rs"

#OAUTH GET
[[bin]]
name = "oauth-consent-get"
path = "src/bin/lambda/oauth-consent-get.rs"

[[bin]]
name = "oauth-optin-get"
path = "src/bin/lambda/oauth-optin-get.rs"

[[bin]]
name = "oauth-login-get"
path = "src/bin/lambda/oauth-login-get.rs"

[[bin]]
name = "oauth-signup-get"
path = "src/bin/lambda/oauth-signup-get.rs"

#OAUTH GENERAL
[[bin]]
name = "oauth-authorize"
path = "src/bin/lambda/oauth-authorize.rs"

[[bin]]
name = "oauth-token"
path = "src/bin/lambda/oauth-token.rs"
