[package]
name = "oauth-flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie = "0.17"
futures = "0.3"
http = "0.2"
lambda_http = { version = "0.7", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.7.3"
aws-sdk-dynamodb = "0.24.0"
aws-sdk-s3 = "0.24.0"
aws-types = "0.54.1"
aws-config = "0.54.1"
log = "0.4.14"
rand = "0.8"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1"
serde_qs = "0.11"
sha2 = "0.10"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
tokio = { version = "1", features = ["macros"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
base64-url = "1.4"
base64 = "0.21"
jsonwebtoken = "8"
serde_urlencoded = "0.7"
crypto = "0.4.0"
rsa = "0.8"
typed-builder = "0.12"

# APP
[[bin]]
name = "app-random-api"
path = "src/bin/app/random-api.rs"

[[bin]]
name = "app-lambda-authorizer"
path = "src/bin/app/authorizer.rs"

[[bin]]
name = "app-auth"
path = "src/bin/app/auth.rs"

[[bin]]
name = "app-login"
path = "src/bin/app/login.rs"

# OAUTH POST
[[bin]]
name = "oauth-consent-post"
path = "src/bin/oauth/consent/post.rs"

[[bin]]
name = "oauth-optin-post"
path = "src/bin/oauth/optin/post.rs"

[[bin]]
name = "oauth-login-post"
path = "src/bin/oauth/login-post.rs"

[[bin]]
name = "oauth-signup-post"
path = "src/bin/oauth/signup-post.rs"

#OAUTH GET
[[bin]]
name = "oauth-consent-get"
path = "src/bin/oauth/consent/get.rs"

[[bin]]
name = "oauth-optin-get"
path = "src/bin/oauth/optin/get.rs"

[[bin]]
name = "oauth-login-get"
path = "src/bin/oauth/login-get.rs"

[[bin]]
name = "oauth-signup-get"
path = "src/bin/oauth/signup-get.rs"

#OAUTH GENERAL
[[bin]]
name = "oauth-authorize"
path = "src/bin/oauth/authorize.rs"

[[bin]]
name = "oauth-token"
path = "src/bin/oauth/token.rs"
