[workspace]
members = [
    "shared",
    "oauth",
    "website"
]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
cookie = "0.17"
futures = { version = "0.3", default-features = false }
http = "0.2"
aws_lambda_events = { version = "0.7", default-features = false, features = ["apigw"] }
lambda_http = { version = "0.7", default-features = false, features = ["apigw_rest"] }
lambda_runtime = "0.7.3"
aws-sdk-dynamodb = "0.24.0"
aws-sdk-ssm = "0.24.0"
aws-sdk-s3 = "0.24.0"
aws-types = "0.54.1"
aws-config = "0.54.1"
log = "0.4.14"
rand = "0.8"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1"
serde_qs = "0.12.0"
sha2 = "0.10"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
tokio = { version = "1", features = ["macros"] }
uuid = { version = "1", features = ["v4", "v5"] }
async-trait = "0.1"
base64-url = "1.4"
base64 = "0.21"
jsonwebtoken = "8"
serde_urlencoded = "0.7"
crypto = "0.4.0"
openssl = { version = "0.10.45", features = ["vendored"] }
typed-builder = "0.13.0"
chrono = { version = "0.4", default-features = false, features = ["time", "clock"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
