[package]
name = "shared"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http.workspace = true
aws_lambda_events.workspace = true
lambda_http.workspace = true
aws-sdk-dynamodb.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
base64-url.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true
serde_urlencoded.workspace = true
typed-builder.workspace = true