[package]
name = "shared"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie.workspace = true
http.workspace = true
aws_lambda_events.workspace = true
lambda_http.workspace = true
aws-sdk-dynamodb.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
base64-url.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true
serde_urlencoded.workspace = true
typed-builder.workspace = true

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = "thin" # This is similar to "fat", but takes substantially less time to run while still achieving performance gains similar to "fat".
codegen-units = 1  # Reduce parallel code generation units
panic = "abort"