[package]
name = "website"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie.workspace = true
futures.workspace = true
http.workspace = true
aws_lambda_events.workspace = true
lambda_http.workspace = true
lambda_runtime.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-s3.workspace = true
aws-types.workspace = true
aws-config.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_qs.workspace = true
sha2.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
uuid.workspace = true
async-trait.workspace = true
base64-url.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true
serde_urlencoded.workspace = true
crypto.workspace = true
rsa.workspace = true
typed-builder.workspace = true
chrono.workspace = true

# APP
[[bin]]
name = "app-random-api"
path = "src/bin/random_api.rs"

[[bin]]
name = "app-lambda-jwt"
path = "src/bin/jwt.rs"

[[bin]]
name = "app-auth"
path = "src/bin/auth.rs"

[[bin]]
name = "app-login"
path = "src/bin/login.rs"

